--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
 </head>
 
   <body>
-    Hello Bitcoin Simulator
+    Bitcoin Simulator <br><br>
+
+    ID: <input type="text" id="idInputBox"> &nbsp
+    <button id="logInButton">Log In</button> <br><br>
+
+    Total Bitcoin: <span id="totalBitcoin">0</span>  <br><br>
+
+    From: <input type="text" id="fromAddress" value=""> <br>
+    To: <input type="text" id="toAddress" value=""> <br>
+    Amount: <input type="text" id="amount" value=""> <br><br>
+
+    <button id="sendButton">Send Bitcoin</button><br><br>
+
+    <button id="generateButton">Generate Bitcoin</button><br>
+
     <aside>
-        
+
     </aside>
     <script src="index.js"></script>    <!-- Include index.js as a JavaScript script file. -->
   </body>
